# digido-digital-assistant

./: .env.example  .gitignore  ACE_TASK.md  AGENTS.md  AGENTS.python-orchestrator.md  AGENT_ISSUE_TEMPLATE.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  agent-issue-sdk.md  project_architecture.md  pyproject.toml
.github/workflows/: add_issues_to_project.yml
docs/: supabase_schema.sql
src/digido_digital_assistant/: __init__.py  config.py  main.py  models.py  routes.py  worker.py
src/digido_digital_assistant/repositories/: connected_accounts.py  finance.py  summaries.py  user_prefs.py
src/digido_digital_assistant/services/: __init__.py  email_categorization.py  email_intelligence.py  google_oauth.py  notifications.py  openai_client.py  secret_manager.py  sender_categorization.py  summaries.py  supabase_auth.py  supabase_client.py  toolbox.py
src/digido_digital_assistant/services/finance/: __init__.py  ingest_orchestrator.py
src/digido_digital_assistant/utils/: time.py
src/digido_digital_assistant/workflows/: daily_summary.py  email_agent.py
tests/: __init__.py  test_finance_api.py  test_ingest_orchestrator.py
