[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digido-digital-assistant"
version = "0.1.0"
description = "LangGraph-powered digital assistant service for Digido."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.2.1",
  "supabase>=2.6.0",
  "twilio>=9.0.0",
  "langgraph>=0.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
digido-api = "digido_digital_assistant.main:run"
digido-worker = "digido_digital_assistant.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/digido_digital_assistant"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]
